<resources>
    <string name="app_name">Ice Cream</string>
    <string name="login">登录</string>
    <string name="menu_name">菜单</string>
    <string name="dish_name">冰淇淋</string>
    <string name="shopcart">购物车</string>
    <string name="clear">清空</string>
    <string name="buy_icecream">买冰淇淋</string>
    <string name="get_icecream">取冰淇淋</string>
    <string name="please_check_terms_of_payment">请选择付款方式</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="wechat_pay">微信支付</string>
    <string name="open_ali_pay_scan">请打开支付宝APP扫描支付</string>
    <string name="open_wechat_scan">请打开微信APP扫描支付</string>
    <string name="welcome_login">欢迎登录</string>
    <string name="ke_rui_mi_ai_merchant">克瑞米艾商户版</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="merchant_user_login_limit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="et_user_name_hint">请输入账户名</string>
    <string name="et_password_hint">请输入密码</string>
    <string name="data_center">数据中心</string>
    <string name="my_sales">我的销量</string>
    <string name="system_management">系统管理</string>
    <string name="list_of_goods">商品列表</string>
    <string name="go_to_the_replenishment">去补货</string>
    <string name="convergence_to_the">融合自提</string>
    <string name="log_out">退出登录</string>
    <string name="title">Title</string>
    <string name="refrigeration">制冷</string>
    <string name="fresh">保鲜</string>
    <string name="cleaning">清洗</string>
    <string name="standby">待机</string>
    <string name="thaw">解冻</string>
    <string name="bus_sterilization">巴士杀菌</string>
    <string name="grow_again">再生</string>
    <string name="heavy_operation">重操作</string>
    <string name="automatic_discharging">自动出料</string>
    <string name="cancel">取消</string>
    <string name="have_sales">已销售：</string>

</resources>
