<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/public_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_55"
        android:gravity="center_horizontal"
        android:text="@string/welcome_login"
        android:textColor="@color/deep_gray_2"
        android:textSize="@dimen/sp_20" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center_horizontal"
        android:text="@string/ke_rui_mi_ai_merchant"
        android:textColor="@color/deep_gray_2"
        android:textSize="@dimen/sp_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/merchant_tv_normal_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_data_center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1"
            android:drawableRight="@drawable/merchant_data_center"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/data_center"
            android:textColor="@color/deep_gray_2" />

        <TextView
            android:id="@+id/tv_my_sales"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1"
            android:background="@drawable/shape_merchant_tv_right_bg"
            android:drawableRight="@drawable/merchant_my_sales"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/my_sales"
            android:textColor="@color/deep_gray_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/merchant_tv_normal_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_system_manager"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1"
            android:drawableRight="@drawable/merchant_system_manager"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/system_management"
            android:textColor="@color/deep_gray_2" />

        <TextView
            android:id="@+id/tv_list_of_goods"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1"
            android:drawableRight="@drawable/merchant_list_of_goods"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/list_of_goods"
            android:textColor="@color/deep_gray_2" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/merchant_tv_normal_bg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_go_to_replenishment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1"
            android:drawableRight="@drawable/merchant_go_to_replenishment"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/go_to_the_replenishment"
            android:textColor="@color/deep_gray_2" />

        <TextView
            android:id="@+id/tv_convergence_to_the"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="1"
            android:drawableRight="@drawable/merchant_convergence"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/dp_10"
            android:paddingRight="@dimen/dp_10"
            android:text="@string/convergence_to_the"
            android:textColor="@color/deep_gray_2" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/dp_25"
        android:layout_marginRight="@dimen/dp_25"
        android:layout_marginTop="@dimen/dp_35"
        android:background="@drawable/shape_merchant_login_bg"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_14" />

</LinearLayout>