<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <include layout="@layout/public_logo" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycle_buy_order"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_150"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/bg" />

    <TextView
        android:id="@+id/tv_preferential"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:background="@color/buy_bg3"
        android:gravity="center"
        android:visibility="gone"
        android:text="优惠活动:已享受满20减10"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center"
        android:text="@string/please_check_terms_of_payment"
        android:textColor="@color/black" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/ll_ali"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_100"
            android:layout_marginRight="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ali_pay" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ali_pay"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:id="@+id/iv_check"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:src="@drawable/check" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_wechat"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_100"
            android:layout_marginTop="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:layout_toRightOf="@id/ll_ali"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/wechat_pay" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wechat_pay"
                android:textColor="@color/black" />


            <ImageView
                android:id="@+id/iv_uncheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/uncheck" />
        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/buy_commit_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:layout_alignParentBottom="true"
            android:background="@color/buy_bg1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_commit_total_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_20"
                android:text="100"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tv_original_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp_20"
                android:text="原价¥:120"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_18" />

        </LinearLayout>

        <ImageView
            android:id="@+id/iv_go_pay"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_45"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/dp_10"
            android:src="@drawable/buy_go_pay" />

    </RelativeLayout>

</LinearLayout>